[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "hcapy"
version = "0.0.2"
description = "hca2wav wrapper working on Python3."
authors = [
    {name = "CrescentApricot", email = "crescentapricot@users.noreply.github.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/CrescentApricot/hcapy"